<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--通知-->
    <!--<string name="has_more_msg"> %1个联系人发来%2条消息</string>-->
    <string name="zhongkuohao">[</string>
    <string name="zhongkuohao_msg">条]</string>

    <string name="app_name">YiChatLite</string>
    <string name="app_chat">会话</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="address_book">通讯录</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">开启新消息通知</string>
    <string name="notify_set">新消息设置</string>
    <string name="numal_set">常用设置</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>

    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Login_failed">登录失败</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="were_mentioned">[有人@我]</string>

    <string name="chatroom_allow_owner_leave"> 允许聊天室群主离开</string>
    <string name="title_user_profile">个人资料</string>

    <string name="Days_ago">天前</string>
    <string name="An_hour_ago">小时前</string>
    <string name="just">刚刚</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="delete_msg_when_exit_group">退出群组时删除聊天数据</string>
    <string name="auto_accept_group_invitation">自动同意群组加群邀请</string>
    <string name="adaptive_video_encode">视频自适应码率编码</string>
    <!--ANyRTC相关-->
    <string name="str_connect_hoster">连麦</string>
    <string name="str_send">发送</string>
    <!--登录-->
    <string name="logining">登录中...</string>
    <string name="Account_does_not_exist">账号不存在</string>
    <string name="Incorrect_password">密码不正确</string>
    <string name="Account_has_been_disabled">账号已被禁用</string>
    <string name="Server_busy">服务器繁忙请重试...</string>
    <string name="login_success">登录成功</string>
    <string name="tel_is_not_allow_null">手机号不能为空</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="please_input_true_mobile">请输入正确的手机号码!</string>
    <string name="Incorrect_phone_number_format">手机号码格式不正确!</string>
    <!--注册-->
    <string name="i_am">我是</string>
    <string name="press_top">点击上面的</string>
    <string name="btn_means_agree">按钮,即表示你同意</string>
    <string name="Secret_agreement">《YiChat软件许可及服务协议》</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register">用户注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="code_is_send">验证码已经发送</string>
    <string name="has_code">获取验证码</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功!</string>
    <string name="Registration_failed">注册失败!</string>
    <string name="country_code">+86</string>
    <string name="are_reset_password">正在重置密码...</string>
    <string name="password_reset_success">密码重置成功！</string>
    <string name="password_reset_failed">密码重置失败!</string>
    <string name="new_password_cannot_be_empty">新密码不能为空!</string>
    <string name="mobile_not_be_null">手机号不能为空</string>
    <string name="mobile_is_register">该手机号码已被注册...</string>
    <string name="image_manager">相册</string>
    <string name="Initiate_group_chat">发起群聊</string>
    <string name="scanning">扫一扫</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend">添加好友</string>
    <string name="me">我</string>
    <string name="bottom_find">发现</string>
    <string name="secret_signal_or_phone_number">YiChat号/手机号</string>
    <string name="countries_and_regions">国家</string>
    <string name="china">中国</string>
    <string name="you_mobile">你的手机号码</string>
    <string name="input_pwd">填写密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="login_by_mobile">使用手机号登录</string>
    <string name="example">例如：陈晨</string>
    <string name="Verification_Code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="Head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="Personal_signature">个性签名</string>
    <string name="modify_name">更改名字</string>
    <string name="Detailed_information">详细资料</string>
    <string name="mobile">手机号</string>
    <string name="send_msg">发送消息</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="pass_or_no_by_send">你需要发送验证申请，等对方通过</string>

    <string name="group_chat">群聊</string>

    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败!</string>
    <string name="Refused">已拒绝</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Are_agree_with">正在同意...</string>

    <string name="Delete_the_contact">删除联系人</string>

    <string name="update_success">更新成功</string>

    <string name="app_id">YiChat号：</string>
    <string name="me_yichat_number">我的YiChat号:</string>
    <string name="not_set">未设置</string>
    <string name="region">地区</string>
    <string name="country">国家或地区</string>
    <string name="yichat_number">YiChat号</string>
    <string name="now_refresh_msg">正在加载资料...</string>
    <string name="are_finding_contact">正在查找联系人...</string>
    <string name="User_does_not_exis">用户不存在</string>
    <string name="server_is_busy_try_again"> 服务器繁忙请重试...</string>
    <string name="search">搜索</string>
    <string name="are_uploading">正在更新...</string>
    <string name="upload_failed">更新失败,code:</string>
    <string name="not_input">未填写</string>
    <string name="change_nick">修改昵称</string>
    <string name="change_mixin">修改YiChat号</string>
    <string name="change_personalized_signature">修改个人签名</string>
    <string name="mixin_can_not_has_chinese">YiChat名不能包含中文</string>
    <string name="string_not_30">不能超过30个字符</string>
    <string name="scan_title">"二维码/条码 扫描"</string>
    <string name="Scanning">扫描中...</string>
    <string name="code_is_not_invlide">无效二维码</string>
    <string name="scanning_image">扫面二维码图片</string>
    <string name="reset_scan">重置扫描</string>
    <string name="me_qrcode">我的身份二维码</string>
    <string name="scan_msg">可进行二维码或条形码扫描\n请使用下方扫描框对准商户终端二维码\n或者机具条形码进行扫描</string>
    <string name="request_add_friend">请求加为好友</string>
    <string name="add_friend_success">同意好友成功！</string>
    <string name="add_friend_failed">同意好友失败</string>
    <string name="already_rejected">已拒绝你的好友申请</string>
    <string name="Reasons">申请理由：</string>
    <string name="Already_added">已添加</string>
    <string name="accept">接受</string>
    <string name="has_rejected">被拒绝</string>
    <string name="save">保存</string>
    <string name="good_name">好名字可以让你的好朋友更容易记得你</string>
    <string name="logout_failed">退出登录失败!</string>
    <!--自动更新-->
    <string name="check_update">检查更新</string>
    <string name="are_checking_update">正在查询更新...</string>
    <string name="has_update">有新版本</string>
    <string name="just_new_version">已经是最新版本了!</string>
    <string name="update_now">现在升级</string>
    <string name="update_later">以后再说</string>
    <!--好友圈-->
    <string name="Circle_of_friends">朋友圈</string>
    <string name="resetPassword">重置密码</string>
    <string name="input_bind_mobile">请输入登录手机号</string>

    <!--关于活动-->

    <string name="loading">正在加载....</string>
    <string name="delete_sucess">删除成功!</string>
    <string name="chat_msg">聊天信息</string>

    <string name="keep_live_setting">体验Pro版</string>
    <string name="donation_git">Github开源地址</string>
    <string name="donation_kaiyuan">开源中国开源地址</string>
    <string name="donation">码云开源地址</string>
    <string name="update_has">现在升级(强制更新)</string>
    <string name="forward">转发</string>
    <string name="reback">撤回</string>
    <string name="really_copy_and_send">确定复制并发送这条消息吗?</string>
    <string name="rebacking">正在撤回...</string>
    <string name="reback_failed">撤回失败!</string>
    <string name="reback_not_more_than_30">超过2分钟的消息不支持撤回!</string>
    <string name="copying">正在复制...</string>
    <string name="copy_success">复制成功!</string>
    <string name="copy_failed">复制失败!</string>
    <string name="please_check_contant">请选择联系人!</string>
    <string name="forword_people">确定转发给1人吗?</string>
    <string name="forword_always">确定转发这条消息?</string>
    <string name="forword_get">获取转发信息中....</string>
    <string name="resend_text">重新发送这条消息吗?</string>
    <string name="stick_conversation">置顶会话</string>
    <string name="cancle_stick_conversation">取消置顶</string>
    <string name="not_more_msg">暂无更多消息!</string>
    <string name="permission_ok">get the permission successfull </string>
    <string name="permission_error">获取权限失败</string>
    <string name="no_permission_camera">未授权的权限</string>
    <string name="people_time">找一找</string>
    <string name="load_failed">加载失败,请重试!</string>
    <string name="load_more_failed">暂无更多数据!</string>
    <string name="close_app">关闭YiChat</string>
    <string name="exit_this_user">退出当前账号</string>
    <string name="just_15">15分钟前</string>
    <string name="just_30">30分钟前</string>
    <string name="just_1hour">1小时前</string>
    <string name="more_people">个联系人</string>
    <string name="open_notice">Open source version only single chat, no group chat!</string>
    <string name="wait_do">Waiting to do somethings!</string>
    <string name="revoke_content_ed">对方撤回了一条消息</string>
    <string name="revoke_content">你撤回了一条消息</string>
    <string name="revoke_content_someone">%s撤回了一条消息</string>

</resources>

