<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_friends"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/list_item_bg_white"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_friends"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/friend_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_friends"
            android:text="@string/Circle_of_friends"
            android:textColor="#353535"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="16dp"
         android:id="@+id/re_qrcode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/list_item_bg_white"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/scan_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_qrcode"
            android:text="@string/scanning"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="16dp"
        android:id="@+id/rl_near"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/list_item_bg_white"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_fujin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/people_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_fujin"
            android:text="@string/people_time"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>




</LinearLayout>