<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebebeb"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <RelativeLayout
                android:id="@+id/re_myinfo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/default_avatar" />


                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/iv_avatar"
                    android:text="@string/not_set"
                    android:textColor="#353535"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/tv_fxid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/iv_avatar"
                    android:text=""
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />


                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/icon_qrcode" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_xiangce"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_xiangce"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/pbotos_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_xiangce"
                    android:text="@string/image_manager"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_qrcode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_qrcode"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/myid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_qrcode"
                    android:text="@string/me_qrcode"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada"
                    android:visibility="gone" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/re_setting"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_setting"
                    android:text="@string/set"
                    android:textColor="#353535"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/re_github"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_github"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/github" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_github"
                    android:text="@string/donation_git"
                    android:textColor="#353535"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/re_oschina"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_oschina"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/oschina" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_oschina"
                    android:text="@string/donation_kaiyuan"
                    android:textColor="#353535"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/re_pro_test"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/list_item_bg_white"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_pro_test"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/fire" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_pro_test"
                    android:text="@string/keep_live_setting"
                    android:textColor="#353535"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
